Fix footer margins and general style.css tidy of code Change text in contact form h6, general tidy of spacing and comments in  html pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,14 +33,20 @@ body {
 
 .navbar .navbar-brand {
     font-family: "Raleway", sans-serif;;
-    font-weight: 400;
+    font-weight: 600;
     color: rgb(167, 9, 9);
-    letter-spacing: 0.2rem;
+}
+
+@media screen and (min-width: 768px) {
+  .navbar .navbar-brand {
+    letter-spacing: 0.3rem;
+  }
 }
 
 /*----------------------------Footer*/
 
 .footer-container {
+    margin-top: 2%;
     padding: 0;
 }
 
@@ -102,9 +108,7 @@ body {
 
 .card-title {
     color: rgb(167, 9, 9);
-
 }
-
 
 @media screen and (min-width: 1025px) {
   .card-general {
@@ -121,7 +125,6 @@ body {
     letter-spacing: 0.3rem;
     text-transform: uppercase;
     padding: 45px 0px 0px 0px;
-    
 }
 
 .contact-us h6 {
@@ -144,7 +147,7 @@ body {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 765px) {
   .contact-us h3 {
     padding: 45px 0px 35px 0px;
   }
